xxl-job/2.4.1/镜像描述.md
# 快速参考

- 开源代码地址：**[github](https://github.com/xuxueli/xxl-job)**  **[gitee](http://gitee.com/xuxueli0323/xxl-job)**
- 代码维护者：**xuxueli**
- 中文文档地址：**[中文文档](https://www.xuxueli.com/xxl-job/)**
- docker镜像维护：https://github.com/loulangogogo/docker-hub
- 提交问题：**[有问题](https://github.com/loulangogogo/docker-hub/issues)**

> **注：本docker镜像来自github开源代码，如有侵权请联系作者删除。**



# 初始化一个实例

该镜像使用外部 mysql 数据库，需要先创建一个库表，可以参考文档创建，或查看 [xxl-job.sql](https://github.com/xuxueli/xxl-job/blob/master/doc/db/tables_xxl_job.sql)。

### docker

> docker run --name xxl-job -e DB_HOST=127.0.0.1 -e DB_PORT=3306 -e DB_USER=root -e DB_PASSWORD=root -p 8080:8080 osmiling/xxl-job:tag



### docker-compose

```yaml
version: '3.1'

services:
  xxl-job:
    image: osmiling/xxl-job:2.4.1
    container_name: xxl-job
    logging:
      driver: json-file
      options:
        max-size: "100m"
        max-file: "5"
    restart: always
    ports:
      - "8080:8080"
    environment:
      DB_HOST: 127.0.0.1
      DB_PORT: 3306
      DB_USER: root
      DB_PASSWORD: root
    volumes:
        - /etc/localtime:/etc/localtime #将外边时间直接挂载到容器内部，权限只读
        - ./logs:/data/applogs/xxl-job
```



# 环境变量

| 变量             | 说明                      | 版本  |
|-----------------| ------------------------- | ----- |
| SERVER_PORT     | 端口设置                  | 2.4.1 |
| SERVER_PATH     | 应用上下文路径 | 2.4.1 |
| DB_HOST            | mysql 主机ip              | 2.4.1 |
| DB_PORT            | mysql 端口                | 2.4.1 |
| DB_USER            | mysql 用户名                | 2.4.1 |
| DB_PASSWORD        | mysql 密码                  | 2.4.1 |
| MAIL_HOST          | mail 邮箱host（smtp.qq.com） | 2.4.1 |
| MAIL_PORT          | mail 邮箱端口 | 2.4.1 |
| MAIL_USER          | mail 邮箱使用名称 | 2.4.1 |
| MAIL_PASSWORD      | mail 邮箱授权码 | 2.4.1 |
| MAIL_FROM          | mail 发送邮件的邮箱 | 2.4.1 |
| JOB_ACCESS_TOKEN    | xxl-job的accesstoken | 2.4.1 |

**注意：可在项目中对应 application.properties 使用。**

> **如果环境变量无法满足配置，可自行映射 application.properties 配置启动。**
